<resources>
    <string name="app_name">维稳办</string>
    <string name="evententry_basic">基本信息</string>
    <string name="evententry_person">当事人</string>
    <string name="evententry_attachment">附件</string>
    <string name="evententry_other">其他</string>
    <string name="reporting_leadership_text">上报领导</string>
    <string name="add_draft_text">保存草稿</string>
    <string name="login_hint_account">请输入用户名</string>
    <string name="login_hint_password">请输入密码</string>
    <string name="login_hint_ip">请输入IP</string>
    <string name="login_hint_port">请输入端口</string>
    <string name="evententry_query_text">事件列表</string>
    <string name="evententry_add_text">新增</string>

    <!--事件录入start-->
    <string name="thing_name">事件名称:</string>
    <string name="happen_time">发生时间:</string>
    <string name="happen_address">发生地点:</string>
    <string name="petition_groups">上访群体:</string>
    <string name="field_departmen">到场部门:</string>
    <string name="pattern_manifestation">表现形式:</string>
    <string name="scope_text">规模:</string>
    <string name="fields_involved">涉及领域:</string>
    <string name="foreign_related">是否涉外:</string>
    <string name="involved_xinjiang">是否涉疆:</string>
    <string name="involve_public_opinion">是否舆情:</string>
    <string name="public_security_disposal">公安处置:</string>
    <string name="belong_street">所属街道:</string>
    <string name="belong_community">所属社区:</string>
    <string name="main_appeals">主要诉求:</string>
    <string name="event_summary">事件概要:</string>
    <string name="leadership_instructions">领导批示:</string>
    <string name="person_name">姓名</string>
    <string name="person_sex">性别</string>
    <string name="person_nation">民族</string>
    <string name="person_idcard_type">证件类型</string>
    <string name="person_idcard">证件号码</string>
    <string name="person_address">户籍地</string>
    <string name="person_party">党员</string>
    <string name="person_email">电子邮件</string>
    <string name="person_telephone">固定电话</string>
    <string name="person_mobile">移动电话</string>
    <string name="person_cph">车牌号</string>
    <string name="person_jobaddress">工作单位</string>
    <string name="person_domilcile">现住地址</string>
    <string name="person_remark">备注</string>
    <string name="field_morphology">现场态势:</string>
    <string name="eventlog_cz">操作:</string>
    <string name="eventlog_czsj">操作时间:</string>
    <string name="eventlog_czms">描述:</string>
    <string name="eventrelevance_lrr">录入人:</string>
    <string name="eventrelevance_lrbm">录入部门:</string>
    <string name="eventrelevance_lrsj">录入时间:</string>
    <string name="department_type">部门类型:</string>
    <string name="department_text">部门:</string>
    <string name="handler_time">处理时限:</string>
    <string name="handler_text">处理内容:</string>
    <!--事件录入end-->


    <!--督察督办start-->
    <string name="supervisor_name">督办名称:</string>
    <string name="supervisor_type">督办类型:</string>
    <string name="be_supervisor_unit">被督办单位:</string>
    <string name="supervisor_glsj">关联事件:</string>
    <string name="feedback_time">督办时限:</string>
    <string name="fk_time">反馈时间:</string>
    <string name="zt_text">状态:</string>
    <string name="supervisor_zpjsr">被转派部门:</string>
    <string name="supervisor_zpyy">转派原因:</string>
    <string name="supervisor_thyy">退回原因:</string>
    <string name="supervisor_require">督办要求:</string>
    <string name="supervisor_fkjg">反馈结果:</string>
    <string name="remark_text">备注:</string>
    <!--督察督办end-->


    <!--工作简报start-->
    <string name="job_name">标题:</string>
    <string name="job_time">时间:</string>
    <string name="job_departmen">上报用户:</string>
    <string name="job_content">内容:</string>
    <string name="job_hbr">汇报人:</string>

    <!--工作简报end-->
</resources>
