<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/linear_evententry">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        style="@style/TextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/person_name" />

                    <EditText
                        android:id="@+id/person_name_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp" />

                </LinearLayout>


                <include layout="@layout/linearlayout_one" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        style="@style/TextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/person_sex" />

                    <EditText
                        android:id="@+id/person_sex_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="男" />

                </LinearLayout>



                <include layout="@layout/linearlayout_one" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        style="@style/TextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/person_nation" />

                    <EditText
                        android:id="@+id/person_nation_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"/>
                </LinearLayout>

                <include layout="@layout/linearlayout_one" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        style="@style/TextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/person_idcard" />

                    <EditText
                        android:id="@+id/person_idcard_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp" />
                </LinearLayout>


                <include layout="@layout/linearlayout_one" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        style="@style/TextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/person_address" />

                    <EditText
                        android:id="@+id/person_address_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp" />

                </LinearLayout>

                <include layout="@layout/linearlayout_one" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        style="@style/TextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/person_party" />

                    <EditText
                        android:id="@+id/person_party_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="否"/>

                </LinearLayout>


                <include layout="@layout/linearlayout_one" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        style="@style/TextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/person_email" />

                    <EditText
                        android:id="@+id/person_email_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp" />

                </LinearLayout>

                <include layout="@layout/linearlayout_one" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        style="@style/TextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/person_telephone" />

                    <EditText
                        android:id="@+id/person_telephone_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp" />

                </LinearLayout>

                <include layout="@layout/linearlayout_one" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        style="@style/TextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/person_mobile" />

                    <EditText
                        android:id="@+id/person_mobile_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp" />

                </LinearLayout>

                <include layout="@layout/linearlayout_one" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        style="@style/TextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/person_jobaddress" />

                    <EditText
                        android:id="@+id/person_jobaddress_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp" />

                </LinearLayout>

                <include layout="@layout/linearlayout_one" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        style="@style/TextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/person_domilcile" />

                    <EditText
                        android:id="@+id/person_domilcile_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp" />

                </LinearLayout>

                <include layout="@layout/linearlayout_one" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        style="@style/TextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/person_remark" />

                    <EditText
                        android:id="@+id/person_remark_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp" />

                </LinearLayout>

                <include layout="@layout/linearlayout_one" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>