<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:clipToPadding="false"
    android:focusable="true"
    android:focusableInTouchMode="true" >

    <RelativeLayout
        android:id="@+id/rlay_login_and_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_picture" >

        <LinearLayout
            android:id="@+id/lay_account"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="23dp"
            android:layout_marginRight="23dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/border_login_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/login_account" />

            <EditText
                android:id="@+id/et_ip"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:hint="@string/login_hint_ip"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lay_password"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_below="@id/lay_account"
            android:layout_marginLeft="23dp"
            android:layout_marginRight="23dp"
            android:background="@drawable/border_login_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/login_password" />

            <EditText
                android:id="@+id/et_port"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:hint="@string/login_hint_port"/>
        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>